getComputedStyle perspective-origin is based on the wrong bounding box https://bugs.webkit.org/show_bug.cgi?id=98027

Patch by Jussi Kukkonen <jussi.kukkonen@intel.com> on 2012-10-03
Reviewed by Simon Fraser.

Source/WebCore:

perspective-origin for ComputedStyleDeclaration is currently calculated using the
wrong bounding box (sizingBox() which ends up as the contentbox).

Start using borderbox for ComputedStyleDeclaration perspective-origin, similar to
what transform-origin already does.

Test: fast/css/getComputedStyle/getComputedStyle-origin-percentage.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Add test for perspective-origin calculation into existing transform-origin test.

* transforms/2d/computed-style-origin-expected.txt:
* transforms/2d/computed-style-origin.html:

Canonical link: https://commits.webkit.org/116274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130277 268f45cc-cd09-0410-ab3c-d52691b4dbfc